--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,18 @@
 #root {
   background: #000;
 }
-.herogreen {
-  background: radial-gradient(#73e0a9, #000000);
-}
-.heroviolet {
-  background: radial-gradient(#5b68df, #000000);
-}
 
-.hero {
+/* .herogreen {
+  background: radial-gradient(#73e0a9, #000000);
+} */
+/* .heroviolet {
+  background: radial-gradient(#5b68df, #000000);
+} */
+
+/* .hero {
   background-image: radial-gradient(
     farthest-corner at 40px 40px,
     #000000 0%,
     #097756 100%
   );
-}
+} */
