--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@
     #097756 100%
   );
 } */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
